# VideoToGif

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.test  README.md  app.py  docker-compose.yml  package.json  pyproject.toml  requirements-dev.txt  video_to_gif.sh
scripts/: remove_background.swift
templates/: index.html
tests/: conftest.py
tests/accessibility/: test_a11y.py
tests/e2e/: test_image_demo.py  test_image_tab.py  test_prompt_demo.py  test_video_demo.py
tests/integration/: test_process_image.py
tests/unit/: test_image_processing.py
